# conda-subchannel

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: docs.yml  test.yml
conda_subchannel/: __init__.py  cli.py  core.py  plugin.py
conda_subchannel/templates/: channel.j2.html  subdir.j2.html
docs/: action.md  conf.py  index.md  robots.txt  start.md  usage.md
docs/_templates/: navbar_center.html
recipe/: meta.yaml
tests/: conftest.py  test_misc.py  test_subchannel.py
